kubernetes/_base/automation/atlantis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlantis
  namespace: automation
  labels:
    app: atlantis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlantis
  template:
    metadata:
      labels:
        app: atlantis
    spec:
      serviceAccountName: atlantis
      securityContext:
        fsGroup: 1000
      containers:
        - name: atlantis
          image: ghcr.io/runatlantis/atlantis:v0.31.0
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - name: atlantis
              containerPort: 4141
          volumeMounts:
            - name: atlantis-data
              mountPath: /atlantis-data
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
      volumes:
        - name: atlantis-data
          persistentVolumeClaim:
            claimName: atlantis
